--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	</header>
 
     <main class="container">
-        <div id="listeProduit" class="row">
+        <div id="listeProduit" class="row justify-content-center">
             
         </div>
 
