--- a/panier.html
+++ b/panier.html
@@ -89,8 +89,8 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
-    <script type="text/javascript" src="style.js"></script>
-    <script type="text/javascript" src="panier.js"></script>
+    <script type="text/javascript" src="javascript/style.js"></script>
+    <script type="text/javascript" src="javascript/panier.js"></script>
 
 </body>
 </html>
